fixed Latex overflow issue on mobile (add scrollbar so content other than latex won't be scrollable)

--- a/content/css/overrides.css
+++ b/content/css/overrides.css
@@ -9,3 +9,8 @@
 .prompt {
 	min-width: 10ex !important;
 }
+
+.MathJax_Display {
+	overflow-x: auto;
+	overflow-y: hidden;
+}
